--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,20 @@
-language: java
-jdk: openjdk12 # by default, travis runs on Java 8. This forces Java 12.
-before_install:
-  - chmod +x gradlew # make sure the Gradle wrapper can be executed
+language: android
+android:
+  components:
+    # The BuildTools version used by your project (make sure it's exactly the same as in the build.gradle)
+    - build-tools-29.0.3
+    # The SDK version used to compile your project
+    - android-29
+    # The SDK version used by the system image
+    - android-22
+    # The system image, to run an emulator during the tests
+    - sys-img-armeabi-v7a-android-22
+before_script:
+  # Emulator Management: Create, Start and Wait
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82
+
+
+
